--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/shoe-detail/shoe-detail.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/shoe-detail/shoe-detail.component.css
@@ -76,3 +76,12 @@ input:focus{
   border-radius: 30px;
   transition: background 0.5s;
 }
+
+select {
+  border: 1px solid #ff523b;
+  padding: 5px;
+}
+
+select:focus {
+  outline: none;
+}
