--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/footer/footer.component.html
@@ -2,10 +2,10 @@
   <div class="container">
     <div class="row">
       <div class="footer-col-1">
-        <h3 class="zoom">Tải App Ở Điện Thoại</h3>
+        <h6 class="zoom">Tải App Ở Điện Thoại</h6>
         <div class="app-logo">
         <img src="../../../assets/img/app-store.png" class="zoom" />
-        <img src="../../../assets/img/play-store.png" class="zoom"/>
+        <img src="../../../assets/img/play-store.png" class="zoom" style="margin-top: 15px"/>
         </div>
       </div>
       <div class="footer-col-2">
@@ -15,7 +15,7 @@
           Số điện liên hệ: 0123456789.</p>
       </div>
       <div class="footer-col-3">
-        <h3 class="zoom">Được Ủy Quyền Bởi</h3>
+        <h6 class="zoom">Được Ủy Quyền Bởi</h6>
         <ul style="padding-right: 30px">
           <li class="zoom">Nike Company</li>
           <li class="zoom">Adidas Company</li>
@@ -25,7 +25,7 @@
       </div>
 
       <div class="footer-col-4">
-        <h3 class="zoom">Theo Dõi Chúng Tôi</h3>
+        <h6 class="zoom">Theo Dõi Chúng Tôi</h6>
         <ul style="padding-right: 30px">
           <li class="zoom">Facebook</li>
           <li class="zoom">Tiktok</li>
