--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/shoe-detail/shoe-detail.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/shoe-detail/shoe-detail.component.html
@@ -6,11 +6,12 @@
     <div class="col-2">
       <h1>{{temp.productName}}</h1>
       <h3 style="color: red">{{temp.price | number:'1.0-0'}} VNĐ</h3>
-      <select>
-        <option  *ngFor="let s of size" [value]="s.sizeId">{{s.sizeNumber}}</option>
+      <select style="width: 70px; height: 35px">
+        <option *ngFor="let s of size" [value]="s.sizeId">{{s.sizeNumber}}</option>
       </select>
-      <input type="number" value="1">
-<!--      <a class="btn" routerLink="/" (click)= "addTocard(temp.productId , temp.avatar, temp.price, temp.productName)">Thêm vào giỏ</a>-->
+
+      <input type="number" value="1" style="margin-top: 15px; height: 20px; width: 55px">
+      <a class="btn" routerLink="/">Thêm vào giỏ</a>
       <a href="" class="btn1" (click)="scrollProduct()">Quay lại</a>
       <h3>{{temp.productName}}</h3>
       <p>{{temp.description}}</p>
