--- a/ShopOfLinh/Shoe-Of-Linh/src/app/home/body/body.component.html
+++ b/ShopOfLinh/Shoe-Of-Linh/src/app/home/body/body.component.html
@@ -1,8 +1,8 @@
-<body>
 <div class="container">
-  <div class="banner" id="home">
+    <div class="banner" id="home">
     <div class="content">
 <!--      <p>WELCOME TO REDSTORE</p>-->
+
       <h1>
         Welcome To... <br/>
         <div class="gradientText">
@@ -23,96 +23,52 @@
       </div>
     </div>
     <div class="avatar">
-
-
-      <img src="../../../assets/img/jordan-whitfield-cfutbZ4Kt2k-unsplash-removebg-preview.png" /></div>
+      <img src="../../../assets/img/jordan-whitfield-cfutbZ4Kt2k-unsplash-removebg-preview.png"/>
+    </div>
   </div>
 
-  <div id="skill">
-    <h1 class="title">SKILL</h1>
-    <div class="listSkill">
-      <div class="item">
-        <div class="name">HTML5</div>
-        <div class="evaluate" style="--point:80%"></div>
-      </div>
-      <div class="item">
-        <div class="name">CSS3</div>
-        <div class="evaluate" style="--point:70%"></div>
-      </div>
-      <div class="item">
-        <div class="name">Javascript</div>
-        <div class="evaluate" style="--point:80%"></div>
-      </div>
-      <div class="item">
-        <div class="name">PHP</div>
-        <div class="evaluate" style="--point:60%"></div>
-      </div>
-      <div class="item">
-        <div class="name">Laravel</div>
-        <div class="evaluate" style="--point:70%"></div>
-      </div>
-      <div class="item">
-        <div class="name">React JS</div>
-        <div class="evaluate" style="--point:90%"></div>
-      </div>
-      <div class="item">
-        <div class="name">Vue JS</div>
-        <div class="evaluate" style="--point:60%"></div>
-      </div>
-      <div class="item">
-        <div class="name">Angular JS</div>
-        <div class="evaluate" style="--point:70%"></div>
+  <div class="categoryabc">
+    <div class="small-containerabc">
+      <div class="rowabc zoom">
+        <div class="col-3a">
+          <img src="../../../assets/img/category-1.jpg"></div>
+        <div class="col-3a">
+          <img src="../../../assets/img/category-3.jpg"></div>
+        <div class="col-3a">
+          <img src="../../../assets/img/category-2.jpg"></div>
       </div>
     </div>
   </div>
+
+
   <div id="project">
-    <h1 class="title">PROJECT</h1>
+    <h2 class="titleabc zoom">Sản Phẩm Của Chúng Tôi</h2>
+    <div style="margin-left: 62%; display: flex; margin-bottom: 50px">
+      <select style="margin-right: 15px" [(ngModel)]="category" (change)="getAllProduct(size)">
+        <option value="">Tất cả</option>
+        <option *ngFor="let item of categoryList" [value]="item.categoryName">{{item.categoryName}}</option>
+      </select>
+      <div class="animationTop delay-02 formabc">
+        <i class="fa-sharp fa-solid fa-magnifying-glass"></i>
+        <input type="text" placeholder="Bạn cần gì ?" [(ngModel)]="name">
+        <i class="fa-thin fa-xmark-large"></i>
+        <button type="submit" (click)="getAllProduct(size)">Tìm</button>
+      </div>
+    </div>
     <div class="listProject">
-      <div class="item">
-        <img src="../../../assets/avatar.png"/>
+      <div class="item" *ngFor="let item of pageSize">
+        <img src="{{item.avatar}}" alt="">
+
         <div class="name">
-          Project Name 1
-        </div>
-      </div>
-      <div class="item">
-        <img src="img2.jpg" alt="">
-        <div class="name">
-          Project Name 1
-        </div>
-      </div>
-      <div class="item">
-        <img src="img3.jpg" alt="">
-        <div class="name">
-          Project Name 1
-        </div>
-      </div>
-      <div class="item">
-        <img src="img4.jpg" alt="">
-        <div class="name">
-          Project Name 1
-        </div>
-      </div>
-      <div class="item">
-        <img src="img5.jpg" alt="">
-        <div class="name">
-          Project Name 1
-        </div>
-      </div>
-      <div class="item">
-        <img src="img6.jpg" alt="">
-        <div class="name">
-          Project Name 1
+          <h5>{{item.productName}}</h5>
+          <h6 style="color: red">{{item.price | number:'1.0-0'}} VNĐ</h6>
+          <a><i class="fa-solid fa-circle-info " style="float: left; font-size: 30px"></i></a>
+          <a><i class="fa-solid fa-cart-plus fa-shake" style="float: right; font-size: 30px; color: #35b0d5"></i></a>
         </div>
       </div>
     </div>
   </div>
-  <div id="contact">
-    <h1 class="title">Contact</h1>
-    <ul class="contact">
-      <li><i class="fa-brands fa-facebook-f"></i></li>
-      <li><i class="fa-brands fa-instagram"></i></li>
-      <li><i class="fa-brands fa-twitter"></i></li>
-    </ul>
-  </div>
+
+
 </div>
-</body>
+
