--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
@@ -14,7 +14,8 @@
       <img src="https://tse4.mm.bing.net/th?id=OIP.K2Q7T8ut9DWzf89nIk_KxAHaE7&pid=Api&P=0" alt=""> Adidas
     </li>
     <li>
-      <img src="http://2.bp.blogspot.com/-qaXQH8brdS8/UTJrGVjyDHI/AAAAAAAAABg/KTCk38iZJ9k/s1600/Logo+Puma.jpg" alt=""> Puma
+      <img src="http://2.bp.blogspot.com/-qaXQH8brdS8/UTJrGVjyDHI/AAAAAAAAABg/KTCk38iZJ9k/s1600/Logo+Puma.jpg" alt="">
+      Puma
     </li>
     <li>
       <img src="../../../assets/img/logo.png" alt=""> RedShop
@@ -35,7 +36,8 @@
       <img src="https://tse4.mm.bing.net/th?id=OIP.K2Q7T8ut9DWzf89nIk_KxAHaE7&pid=Api&P=0" alt=""> Adidas
     </li>
     <li>
-      <img src="http://2.bp.blogspot.com/-qaXQH8brdS8/UTJrGVjyDHI/AAAAAAAAABg/KTCk38iZJ9k/s1600/Logo+Puma.jpg" alt=""> Puma
+      <img src="http://2.bp.blogspot.com/-qaXQH8brdS8/UTJrGVjyDHI/AAAAAAAAABg/KTCk38iZJ9k/s1600/Logo+Puma.jpg" alt="">
+      Puma
     </li>
     <li>
       <img src="../../../assets/img/logo.png" alt=""> RedShop
@@ -94,8 +96,8 @@
           <div class="my-card-body">
 
             <a class="buton-mn" *ngIf="role =='ROLE_ADMIN'">
-           <i class="fa-regular fa-trash-can fa-bounce fa-xl"
-                         style="color: #fc0b0b; float: right; padding-bottom: 70px; margin-right: 15px; cursor: pointer"></i>
+              <i class="fa-regular fa-trash-can fa-bounce fa-xl"
+                 style="color: #fc0b0b; float: right; padding-bottom: 70px; margin-right: 15px; cursor: pointer"></i>
 
             </a>
             <h5 class="my-card-title">{{item.productName }}</h5>
