--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/header/header.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/header/header.component.html
@@ -29,10 +29,11 @@
         </ul>
       </nav>
       <a routerLink="/cart">
-        <img src="../../../assets/img/cart.png" width="30px" height="30px" class="animationTop delay-06"/><span>{{count}}</span>
+        <div>
+        <img src="../../../assets/img/cart.png" width="30px" height="30px" class="animationTop delay-06" />{{oder.length}}
+        </div>
       </a>
     </div>
-
     <div class="row">
       <div class="col-2">
         <h1 class="animationTop delay-07">Phong Cách Người Dẫn Đầu<br>
