--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
@@ -66,9 +66,12 @@
 </div>
 
 
-<div class="small-containerabc">
-  <h2 class="titleabc zoom">Sản Phẩm Mới Nhất</h2>
-</div>
+<!--<div class="small-containerabc">-->
+<!--  <h2 class="titleabc zoom">Sản Phẩm Mới Nhất</h2>-->
+<!--</div>-->
+
+
+
 
 
 <div class="small-containerabc">
