--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/cart/oder-payment/oder-payment.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/cart/oder-payment/oder-payment.component.html
@@ -3,33 +3,41 @@
     <h2>THÔNG TIN MUA HÀNG</h2>
   </div>
   <div class="d-flex">
-    <form action="" method="">
+    <form  [formGroup]="updateForm">
       <label>
-        <span class="fname">Họ và tên <span class="required">*</span></span>
-        <input type="text" name="fname">
-      </label>
-      <label>
-        <span class="lname">Ngày sinh<span class="required">*</span></span>
-        <input type="date" name="lname" style="width: 60%; height: 35px">
+        <input *ngIf="updateForm" type="hidden" formControlName="accountId">
       </label>
 
       <label>
-        <span>CMND/CCCD <span class="required">*</span></span>
-        <input type="number" name="houseadd" placeholder="" required style="width: 60%">
+        <span class="fname">Họ và tên <span class="required">*</span></span>
+        <input *ngIf="updateForm" type="text" formControlName="name">
       </label>
+
       <label>
-        <span>Số điện thoại <span class="required">*</span></span>
-        <input type="number" name="city" style="width: 60%">
+        <span class="lname">Ngày sinh<span class="required">*</span></span>
+        <input type="date"  style="width: 60%; height: 35px" formControlName="dateOfBirth">
       </label>
+
+      <label>
+        <span class="lname">CMND/CCCD <span class="required">*</span></span>
+        <input *ngIf="updateForm" type="number" style="width: 60%" formControlName="idCard">
+      </label>
+
+      <label>
+        <span class="lname">Số điện thoại <span class="required">*</span></span>
+        <input *ngIf="updateForm" type="number"  style="width: 60%" formControlName="phoneNumber">
+      </label>
+
       <label>
         <span>Email <span class="required">*</span></span>
-        <input type="text" name="city">
+        <input *ngIf="updateForm" type="text"  formControlName="email">
       </label>
 
       <label>
         <span>Địa chỉ<span class="required">*</span></span>
-        <textarea class="textarea"></textarea>
+        <textarea *ngIf="updateForm" class="textarea" formControlName="address"></textarea>
       </label>
+
       <label>
       <div style="width: 385px; margin-left: 160px" id="myPaypalButtons"></div>
       </label>
@@ -43,9 +51,9 @@
         <tbody *ngFor="let item of oderView | paginate:{itemsPerPage:3, currentPage: p}">
         <tr>
           <img style="width: 100px; height: 100px" src="{{item.avatarProduct}}"><br>
-          <td>{{item.nameProduct}}</td>
-          <td>x{{item.quantity}}</td>
-          <td>{{item.totalPrice| number:'1.0-0'}}VNĐ</td>
+          <td *ngIf="item">{{item.nameProduct}}</td>
+          <td *ngIf="item">x{{item.quantity}}</td>
+          <td *ngIf="item">{{item.totalPrice| number:'1.0-0'}}VNĐ</td>
         </tr>
         </tbody>
       </table><br>
