--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/header/header.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/header/header.component.html
@@ -9,28 +9,26 @@
         <ul>
           <li class="animationTop delay-03"><a routerLink="/">Trang Chủ</a></li>
           <li class="animationTop delay-03"><a routerLink="/">Liên Hệ</a></li>
-          <li class="animationTop delay-04"><a routerLink="/">Lịch Sử Mua Hàng</a></li>
-          <li class="animationTop delay-03"><a routerLink="/home/create" *ngIf="role != 'ROLE_ADMIN'">Thêm Mới</a></li>
-          <li class="animationTop delay-03"><a routerLink="/home/create" *ngIf="role != 'ROLE_ADMIN'">Kho Hàng</a></li>
+          <li class="animationTop delay-04"><a routerLink="/cart/history">Lịch Sử Mua Hàng</a></li>
+          <li class="animationTop delay-03"><a routerLink="/home/create" *ngIf="role !='ROLE_CUSTOMER'">Thêm Mới</a></li>
+          <li class="animationTop delay-03"><a routerLink="/home/create" *ngIf="role !='ROLE_CUSTOMER'">Kho Hàng</a></li>
           <li class="animationTop delay-05 "><a routerLink="/security" *ngIf="!isLoggedIn">Đăng Nhập</a></li>
           <li>
             <div class="dropdown" *ngIf="isLoggedIn">
-              <button class="dropbtn">{{user.name}}</button>
-              <!--          <img src="{{user?.avatar}}" style="width: 30px; height: 30px; border-radius: 50%">-->
+              <button class="dropbtn">{{user?.name}}</button>
               <div class="dropdown-content">
-                <!--            <img src="{{user?.avatar}}" style="width: 40px; background-image: none; border-radius: 50%; height: 40px" height="24" width="24" >-->
-                <a href="#">Thông tin cá nhân</a>
+                <a routerLink="/home/profile">Thông tin cá nhân</a>
                 <a href="#">Đổi mật khẩu</a>
                 <a (click)="logout()">Đăng xuất</a>
               </div>
             </div>
-            <!--        <i class="fa-solid fa-angle-down"></i>-->
           </li>
+
         </ul>
       </nav>
       <a routerLink="/cart">
-        <div>
-        <img src="../../../assets/img/cart.png" width="30px" height="30px" class="animationTop delay-06" />{{oder.length}}
+        <div style="position: fixed; color: #f44336; z-index: 1">
+          <img src="../../../assets/img/cart.png" width="30px" height="30px" class="animationTop delay-06"  />{{cartItemCount }}
         </div>
       </a>
     </div>
