--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.css
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.css
@@ -313,3 +313,140 @@ select:focus {
 }
 
 
+.carousel {
+  width: 100%;
+  position: relative;
+  margin-top: 70px;
+}
+
+.wrapper {
+  max-width: 1170px;
+}
+     .card:hover .overlay {
+       opacity: 1;
+     }
+
+
+
+
+.carousel {
+  width: 100%;
+  position: relative;
+  margin-top: 70px;
+}
+
+.wrapper {
+  max-width: 1170px;
+}
+
+h3 {
+  font-size: 18px;
+  padding: 10px 20px;
+  display: inline-block;
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+
+ul.products {
+  display: flex;
+  flex-wrap: wrap;
+  list-style: none;
+  justify-content: center;
+  width: 100%;
+  /*margin-left: 30px;*/
+  margin-bottom: 0;
+}
+
+ul.products li {
+  flex-basis: 17%;
+  padding: 0;
+  box-sizing: border-box;
+  margin: 10px 7.5px;
+}
+
+ul.products li .product-top {
+  position: relative;
+  overflow: hidden;
+}
+
+ul.products li .product-top .product-thumb {
+  display: block;
+  height: 0;
+  padding-bottom: 100%;
+  position: relative;
+  overflow: hidden;
+}
+
+
+ul.products li:hover .product-top .product-thumb img {
+  transform: scale(1.1);
+  transition: 0.5s ease-in-out;
+}
+
+ul.products li .product-top .product-thumb img {
+  display: block;
+  width: 100%;
+  height: 200px;
+  position: absolute;
+  top: auto;
+  border-radius: 10px;
+}
+
+ul.products li .product-top a.buy-now {
+  text-transform: uppercase;
+  text-decoration: none;
+  text-align: center;
+  display: block;
+  background-color: #f44336;
+  color: white;
+  padding: 10px 0;
+  position: absolute;
+  width: 100%;
+  bottom: -80px;
+  transition: 0.5s ease-in-out;
+  opacity: 0.75;
+}
+
+ul.products li:hover .product-top a.buy-now {
+  bottom: 0;
+}
+
+ul.products li .product-info {
+  padding: 10px 0;
+}
+
+ul.products li .product-info a {
+  display: block;
+  text-decoration: none;
+}
+
+ul.products li .product-info a.product-cat {
+  font-size: 12px;
+  text-transform: uppercase;
+  padding: 3px 0;
+}
+
+ul.products li .product-info a.product-name {
+  padding: 2px 0;
+  font-weight: 600;
+}
+
+div.previous {
+  width: 20px;
+  padding-top: 90px;
+  margin-right: 20px;
+}
+
+div.previous a, div.next a {
+
+}
+
+div.next {
+  width: 20px;
+  padding-top: 90px;
+  margin-left: 20px;
+}
+
+a:hover {
+  cursor: pointer;
+}
