--- a/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
+++ b/Shoe-Shop-LinhPT/Shoe-Shop/src/app/home/body/body.component.html
@@ -66,11 +66,41 @@
 </div>
 
 
-<!--<div class="small-containerabc">-->
-<!--  <h2 class="titleabc zoom">Sản Phẩm Mới Nhất</h2>-->
-<!--</div>-->
-
-
+<div class="small-containerabc">
+  <h2 class="titleabc zoom">Sản Phẩm Hot</h2>
+  <div class="wrapper">
+    <ul class="products">
+      <div class="previous">
+        <a class="previous">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        </a>
+      </div>
+      <li *ngFor="let temp of productHot">
+        <div class="product-item">
+          <div class="product-top">
+            <a href="" class="product-thumb">
+              <img src="{{temp.avatar}}">
+            </a>
+            <a class="buy-now" data-toggle="modal" data-target="#detail" (click)="addToCart(temp)"
+            >Mua ngay</a>
+          </div>
+        </div>
+        <div class="product-info">
+          <a href="" class="product-cat"></a>
+          <a class="product-name">{{temp.nameProduct}}<span
+            style="background-color: lightgray;color: #007bff;font-weight: 600"
+          ></span></a>
+          <div class="product-price"><p style="color: #f44336; display: block">Giá: {{temp.priceProduct| number:'1.0-0'}} VNĐ</p> </div>
+        </div>
+      </li>
+      <div class="next">
+        <a class="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        </a>
+      </div>
+    </ul>
+  </div>
+</div>
 
 
 
@@ -140,13 +170,14 @@
       <div class="col-2">
         <img src="../../../assets/img/Nike-16-removebg-preview.png" class="offer-img zoom"/></div>
       <div class="col-2">
+        <h1 class="zoom">Sắp Ra Mắt</h1>
         <h1 class="zoom">NIKE BRAND F1</h1>
         <small class="zoom">Được tạo ra cho gỗ cứng nhưng được sử dụng trên đường phố,
           Dunk Low cổ điển của chúng tôi trở lại với lớp phủ sắc nét và đồ họa Nike cổ điển.
           Biểu tượng bóng rổ này truyền cảm hứng của thập niên 90 với sự kết hợp giữa áo ba lỗ
           và áo jersey ở phần trên mềm mại, thoải mái và bền bỉ. Công nghệ giày dép hiện đại giúp mang
           lại sự thoải mái trong thế kỷ 21.</small><br>
-        <a href="#" class="btn">Mua Ngay &#8594;</a>
+        <a href="#" class="btn">Đặt hàng &#8594;</a>
       </div>
     </div>
   </div>
